<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/main"
    android:gravity="center"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etMorningTime"
        android:layout_width="320dp"
        android:layout_height="50dp"
         android:paddingStart="12dp"
       android:background="@drawable/edit_text_bg"
        android:hint="@string/enter_morning_screen_time_minutes"
        android:inputType="number"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etAfternoonTime"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:paddingStart="12dp"

        android:background="@drawable/edit_text_bg"
        android:hint="@string/enter_afternoon_screen_time_minutes"
        android:inputType="number"

        tools:ignore="RtlSymmetry" />
    <EditText
        android:id="@+id/etNote"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:paddingStart="12dp"

        android:background="@drawable/edit_text_bg"
        android:hint="@string/note"
        tools:ignore="RtlSymmetry" />
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/black"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnViewDetails"
        android:backgroundTint="@color/black"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_details"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnClear"
        android:backgroundTint="@color/black"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_data"/>
</LinearLayout>
