<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:id="@+id/details"

    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_for_each_day"
            android:textSize="18sp"
            android:padding="15dp"
            android:background="@drawable/edit_text_bg"
            android:paddingBottom="16dp"/>

        <TextView
            android:id="@+id/tvAverage"
            android:background="@drawable/edit_text_bg"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/average_screen_time"
            android:padding="20dp"
            android:textSize="18sp"

            />

        <Button
            android:id="@+id/btnBack"
            android:backgroundTint="@color/black"
            android:layout_width="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"
            android:text="@string/back_to_main_screen"/>
    </LinearLayout>
</ScrollView>
